# openai-agents-sdk-case-review-demo

./: .gitignore  README.md  openai_agents_sdk_case_review_state_machine_spec.md  pyproject.toml  requirements.txt
data/: README.md  extended_prepared_cases.csv  prepared_cases.csv
notebooks/: case_review_single_trace.ipynb  case_review_step_by_step.ipynb  case_review_step_by_step_colab.ipynb
scripts/: build_extended_dataset.py  prepare_cases.py
src/case_review_demo/: __init__.py  agents_setup.py  data_store.py  guardrails.py  main.py  models.py  notebook_steps.py  telemetry.py  tools.py  workflow.py
