[project]
name = "openaisdk-triage-demo"
version = "0.1.0"
description = "Learner-friendly OpenAI Agents SDK case review tracing demo"
requires-python = ">=3.10"
dependencies = [
  "openai-agents>=0.4.0",
  "pandas>=2.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "scikit-learn>=1.3.0",
  "rich>=13.0.0",
]

[project.scripts]
case-review-demo = "case_review_demo.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
